# bangumi-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
bangumi_cli/: api.py  auth.py  base_logger.py  cli.py  client.py  collection.py  settings.py  types.py
example_data/: 328609.json
tests/: test_collection.py
